# TahakomRASPILib

applications/BlinkLed/: CMakeLists.txt  main.cpp
applications/BlinkLedWidget/: CMakeLists.txt  main.cpp
applications/BlinkLedWidget/gui/: gui.h
lib/component/: CMakeLists.txt
